# comet

./: Cargo.toml  LICENSE  README.md
.cargo/: config
.github/workflows/: rust.yml
src/: crc.rs  crc16.rs  main.rs  sock.rs
