[package]
name = "comet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = { version = "0.14.1", features = ["hal"] }
rand = "0.8.5"
serde = {version = "1.0.171", features = ["derive"] }
serialport = {version = "4.2.2", default-features = false }
tungstenite = "0.20.1"
url = { version = "2.1.0", optional = false }
##serde_json = "1.0.102"
bincode = "1.3.3"
crc8 = "0.1.1"
